# mantis

./: .env.example  .gitignore  .hud_eval.toml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.cua  Dockerfile.local  LEARNINGS.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  boattrader_leads.csv  boattrader_leads_final.csv  boattrader_leads_full.csv  check_benchmark.sh  check_web_tasks.sh  deploy_gpu.sh  env.py  export_leads.py  leads_holo3.csv  leads_latest.csv  leads_latest_run_20260422_161951.csv  mkdocs.yml  modal_brain_server.py  modal_cua_server.py  modal_hud_eval.py  modal_inference_server.py  modal_osworld.py  modal_osworld_31b_f16.py  modal_osworld_direct.py  modal_test_gemma4_cua.py  modal_test_gpu.py  modal_web_tasks.py  (+17 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml  test.yml
baseten/: README.md
baseten/gemma4/: config.yaml
baseten/holo3/: config.yaml
benchmarks/: __init__.py  classifieds_apache.conf  flatten_docker_layers.py  osworld_chrome.py  osworld_multiapp.py  sim_envs.py  visualwebarena.py  vwa_sidecars.py
deploy/aws/: README.md
deploy/baseten/: README.md
deploy/computer_plane/: daytona_provision.py
deploy/gke/: README.md
deploy/modal/: browser_use_plane.py  modal_brain_server.py  modal_cua_server.py  modal_hud_eval.py  modal_inference_server.py  modal_mantis_server.py  modal_osworld.py  modal_osworld_31b_f16.py  modal_osworld_direct.py  modal_plan_runner.py  modal_test_gemma4_cua.py  modal_web_tasks.py  modal_web_tasks_agents.py  modal_web_tasks_opencua.py
deploy/sim_envs/: __init__.py  _capture_brief.md  _daytona_patch.py  _daytona_restart.py  _shopify_spec.md  daytona_mantis_boattrader.py  daytona_mantis_mirror.py  daytona_mantis_mirror_v2.py  daytona_mantis_shopify.py  modal_mantis_auth.py  modal_mantis_crm.py  modal_mantis_helpdesk.py  modal_mantis_linkedin.py  modal_mantis_shop.py  modal_stub.py
docker/: cua.Dockerfile  hud.Dockerfile  local.Dockerfile  server.Dockerfile
docs/: API.md  ARCHITECTURE.md  PROPOSAL-mantis-cua-replaces-vision_claude.md  api.md  architecture.md  continuous-improvement-architecture.md  index.md  integration-vision_claude.md  learnings.md  llms.txt  staffai-vision_claude-parity.md
docs/appendix/: index.md
docs/client/: auth.md  errors.md  index.md  plans.md  pure-cua.md  recordings.md  runs-and-polling.md  streaming-events.md
docs/envs/: HARNESS.md  SPEC.md
docs/experiments/: SCORECARD_HISTORY.jsonl  index.md  scorecard-history.md
docs/failures/: index.md  known-issues.md
docs/getting-started/: cli.md  concepts.md  index.md  plan-formats.md  quickstart.md  use-cases.md
docs/hosting/: aws.md  baseten.md  gke.md  index.md  local.md  modal.md
docs/integrations/: any-agent.md  augur.md  embedding-microplanrunner.md  generic-cua.md  index.md  recipes.md
docs/operations/: allowlist.md  continual-finetuning.md  cost.md  form-target-providers.md  idempotency.md  independent-grounding.md  index.md  metrics.md  model-promotion.md  per-action-dashboard.json  rate-limits.md  runtime-recipes.md  stealth-diagnostics.md  tenant-keys.md  wall-time-aggregation.md  webhooks.md
docs/proposals/: computer-plane-as-a-product.md  rollout-generator.md
docs/recipes/: news_ycombinator_com.md
docs/reference/: ablation-harness.md  adaptive-click-tol.md  adaptive-loop-windows.md  index.md  (+21 more)
examples/: README.md  extract_events.py  form_fill_with_runtime.json  github_issues.py  google_search_extract.json  hn_top_5.py  pricing_page.py
experiments/: experiment.py  program.md  submit_one_trial.py
internal-docs/: PROPOSAL.md  README.md
plans/: bt03_gated_reveal.json  linkedin-connect.json  multi-app-research.json
recipes/: README.md
scripts/: ablate_v1_cua.py  analyze_text_plan_run.py  baseten_workload.py  bench_text_plan.py  check_benchmark.sh  check_benchmark_31b.sh  check_boattrader.sh  check_web_tasks.sh  convert_vwa_to_gym.py  docker_entrypoint.sh  env_up.py  lint_no_customer_info.py  monitor_boattrader.sh  monitor_run.sh  replay_test.py  run_boattrader_urlnav_with_proxy.py  run_cua_audit.py  run_cua_canary.py  run_hud_osworld.py  run_local.py  run_luma_extract.py  run_multi_app_research.py  run_osworld.py  run_web_tasks.py  scan_cua_audit.py  test_extraction_prompt.py  verify_initial_user_input_substitution.py  verify_modal_endpoint.py  verify_modal_luma_curl.sh  verify_planner_modelio_live.py
tests/: conftest.py  test_adaptive_content_settle.py  test_adaptive_settle.py  test_adaptive_settle_end_to_end_budget.py  test_admin_token_isolation.py  test_agentic_recovery.py  test_agentic_retry_feedback.py  test_already_seen_url_skip_envelope.py  test_anthropic_cache.py  test_anthropic_client.py  test_anthropic_retries_spent.py  test_artifacts_endpoint.py  test_augur_adopt_task_spec_children_683.py  test_augur_capture_logprobs_687.py  test_augur_group_id_step_propagation_685.py  test_augur_live_cost_publish.py  test_augur_log_bridge_gap.py  test_augur_run_id_uniqueness_649.py  test_augur_runtime_surface.py  test_augur_sdk_0_3_step_iterations.py  test_augur_sdk_0_6_task_spec_680.py  test_augur_step_id_unique_per_emission_659.py  test_augur_subgoals_686.py  test_baseten_cancel_pause_dispatch.py  test_baseten_chrome_profile.py  test_baseten_live_viewer.py  test_baseten_lora_parity.py  test_baseten_parity_audit.py  test_baseten_shape_parity_with_modal.py  test_behavioral_jitter.py  test_brain_budget_clamp.py  test_brain_claude.py  test_brain_fara.py  test_brain_ladder.py  test_brain_mock.py  test_brain_predicted_outcome.py  test_brain_protocol.py  test_brain_retry_attempts_integration.py  test_browser_state.py  test_browser_state_checkpoint.py  (+344 more)
training/: convert_agentnet.py  convert_claude_trajectories.py  convert_labelled_traces.py  convert_rollouts.py  eval_harness.py  modal_train.py  modal_train_holo3.py  promotion_scorecard.py  rollout_collector.py  screenshot_benchmark.py  shadow_analytics.py  train_gemma4_cua.py  train_holo3_distill.py
(+983 files in other folders)
