[project]
name = "mantis-agent"
version = "0.1.0"
description = "Mantis — a small creature with world-class vision that watches patiently and acts with speed and precision"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "Mantis contributors" }]
keywords = ["cua", "computer-use-agent", "browser-automation", "llm", "agent", "holo3", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

[project.urls]
Homepage = "https://github.com/mercurialsolo/mantis"
Documentation = "https://mercurialsolo.github.io/mantis/"
Repository = "https://github.com/mercurialsolo/mantis"
Issues = "https://github.com/mercurialsolo/mantis/issues"
# Slim base: just what is needed to import mantis_agent.{actions, gym.base, site_config, ...}
# without dragging in GPU, browser, or desktop deps. Add an extras group below
# for the use case you actually need.
dependencies = [
    "pillow>=10.0",
]

[project.optional-dependencies]
# Orchestrator-only — for callers that run MicroPlanRunner in their own
# process and talk to a remote Mantis Holo3 service over /v1/chat/completions
# plus Anthropic over /v1/messages. No GPU, no in-process llama.cpp, no
# browser. This is what library-embedded host integrations install.
orchestrator = [
    "requests>=2.28",
    "pydantic>=2",
]
# Server side wants prometheus + the orchestrator deps too.
metrics = [
    "prometheus-client>=0.20",
]
# Self-host the FastAPI server that fronts /predict and /v1/chat/completions.
# Used by the Baseten / EKS / GKE deployments.
server = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2",
    "requests>=2.28",
    "prometheus-client>=0.20",
]
# In-process Holo3 + desktop. Pulls torch / transformers / pyautogui / mss.
# Use this when running the agent loop locally with its own Xvfb.
local-cua = [
    "transformers>=4.52",
    "torch>=2.1",
    "mss>=9.0",
    "pyautogui>=0.9",
]
# Live web viewer (MJPEG + action log).
viewer = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
# Optional GPU acceleration extras (4-bit quantization, accelerate runtime).
gpu = [
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
]
# HUD evaluation harness.
hud = [
    "hud-python>=0.5.34",
    "openai>=1.0",
    "modal>=0.73",
]
# Test / lint tooling.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.24",   # FastAPI TestClient
]
# MkDocs site builder + plugins.
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-awesome-pages-plugin>=2.9",
    "pymdown-extensions>=10.7",
]
# Convenience: install everything.
full = [
    "mantis-agent[orchestrator,server,local-cua,viewer,gpu,hud]",
]

[project.scripts]
mantis = "mantis_agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "OSWorld",
    "outputs",
    "screenshots",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `training/` holds standalone scripts (rollout_collector.py, convert_rollouts.py)
# that the test suite imports via `from training.X import ...`. Adding the repo
# root puts them on sys.path without forcing `training/` to become a package.
pythonpath = ["."]
norecursedirs = [
    ".claude",
    "OSWorld",
    "outputs",
    "screenshots",
]
