[project]
name = "mantis-agent"
version = "0.1.0"
description = "Mantis — a small creature with world-class vision that watches patiently and acts with speed and precision"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "Mantis contributors" }]
keywords = ["cua", "computer-use-agent", "browser-automation", "llm", "agent", "holo3", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

# Slim base: just what is needed to import mantis_agent.{actions, gym.base, site_config, ...}
# without dragging in GPU, browser, or desktop deps. Add an extras group below
# for the use case you actually need.
dependencies = [
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/mercurialsolo/mantis"
Documentation = "https://mercurialsolo.github.io/mantis/"
Repository = "https://github.com/mercurialsolo/mantis"
Issues = "https://github.com/mercurialsolo/mantis/issues"

[project.optional-dependencies]
# Orchestrator-only — for callers that run MicroPlanRunner in their own
# process and talk to a remote Mantis Holo3 service over /v1/chat/completions
# plus Anthropic over /v1/messages. No GPU, no in-process llama.cpp, no
# browser. This is what library-embedded host integrations install.
orchestrator = [
    "requests>=2.28",
    "pydantic>=2",
]
# Typed Python client surface (#267) — `from mantis_agent.client import
# MantisClient`. Same deps as orchestrator (requests + pydantic), exposed
# under a friendlier extras name for integrators who just want to call
# the API. No FastAPI / torch / Pillow / Holo3.
client = [
    "requests>=2.28",
    "pydantic>=2",
]
# Server side wants prometheus + the orchestrator deps too.
metrics = [
    "prometheus-client>=0.20",
]
# Augur observability (#509) — per-run debug bundles + optional live
# streaming to the Augur workspace via DebugSession. When AUGUR_DSN is
# set in the environment, every gym run streams; when unset, the same
# records still land on disk under ${MANTIS_DATA_DIR}/augur/<run_id>/.
# The wedge in src/mantis_agent/observability/augur.py imports
# augur_sdk lazily and no-ops when the package isn't installed, so
# this extra is purely opt-in — no base-install footprint change.
observability = [
    # 0.2.x — public surface (DebugSession, record_step, record_event,
    # attach_observation, record_modelio, set_score, …) is backwards-
    # compatible with the 0.1.x adapter wiring in observability/augur.py
    # and observability/modelio.py. ONE breaking change in 0.2: the
    # private ``augur_sdk._schema`` re-export moved to the standalone
    # ``augur-schema`` package (installed automatically as a runtime
    # dep). We don't import _schema in this repo (verified by grep)
    # so the migration is a pure pin bump.
    #
    # New surfaces available for adoption (not yet wired):
    #   - attach_verifier (0.1.5)
    #   - set_costs / set_step_costs (0.1.8)
    #   - ModelApiAdapterBase (0.1.7)
    #   - set_step_versions + auto-stamp from modelio (0.1.13)
    #   - attach_env_fingerprint (0.1.13)
    #   - record_judge_decision (0.1.13)
    #   - mark_for_eval / finalize_outcome / record_reasoning (0.1.14)
    #   - branch_context (DebugSession ctor) / declare_side_effect /
    #     commit_side_effect / bind_intervention (0.1.14)
    #
    # Capped at <0.3 so a future 0.3 with another breaking change
    # doesn't silently land — operator should validate the upgrade.
    #
    # 0.2.1 adds DebugSession.branch_from + the documented
    # branch_context= kwarg surface that mantis uses to label fan-out
    # partition sessions under a shared parent_run_id (see
    # observability/augur.py). Pinning to 0.2.1 minimum so consumers
    # don't accidentally downgrade past the branch surface.
    #
    # 0.3.0 (mercurialsolo/augur-sdk#30, #31) — step-iteration semantics.
    # EventRecorder is now keyed by ``step_id`` rather than
    # ``step_index``, so loop iterations through the same plan position
    # no longer collapse into one in-memory slot (the bug surfaced by
    # boattrader rerun ``20260524_180432_d308f9de`` — 291 worker
    # dispatches landed as 10 Augur rows). The SDK adds
    # ``DebugSession.record_step_iteration(step_index, iteration)`` —
    # producer-side helper that appends an iteration under an existing
    # canonical step and bumps the canonical's ``step_iterations``
    # counter. Augur server + viewer already render ``N (M)`` when
    # iterations > canonical-steps. Mantis migration sits in
    # ``observability/augur.py``: first emission for a given
    # ``step_index`` routes through ``record_step``; subsequent
    # emissions route through ``record_step_iteration``.
    #
    # 0.4.0 (mercurialsolo/augur-sdk#38) — fan-out grouping. Adds
    # ``DebugSession.open_orchestrator(...)`` for opening parent-only
    # sessions that carry aggregate metadata (phase counts, fanout
    # pattern, total budget) for fan-out runs. Wired into
    # ``gym/fanout_runner.run_fanout_dispatch`` so the Augur viewer
    # renders one parent row with N children grouped under it
    # (mercurialsolo/augur#138) instead of flat siblings. Exports
    # ``ORCHESTRATOR_TAG_KEY`` / ``ORCHESTRATOR_TAG_VALUE`` constants
    # used by ``observability/augur.open_orchestrator_session``.
    #
    # 0.5.0 — per-token logprob capture (training-data quality).
    # Adds ``DebugSession(capture_logprobs=True)`` + the
    # ``ModelApiAdapterBase.extract_logprobs_from_response`` helper
    # that maps OpenAI ``choices[].logprobs.content[]`` and Anthropic
    # ``content[].logprobs[]`` to a canonical
    # ``[{token, token_id?, logprob, top_alternatives?}]`` shape.
    # Mantis Phase B opt-in via ``MANTIS_CAPTURE_LOGPROBS=1``.
    #
    # 0.6.0 — TaskSpec, group_id, set_loop_detected, set_score(...,
    # should_stop=, uncertainty=), record_subgoal_completion. Wired
    # into ``observability/augur.open_orchestrator_session`` (task_spec
    # + group_id on the orchestrator row) and the AugurAdapter init
    # path (group_id propagation to fan-out children). The schema
    # floor is ``augur-schema>=0.4.1`` (0.4.0 had a loader bug that
    # left ``task_spec`` / ``subgoals_completed`` unregistered; pip
    # resolves transitively).
    "augur-sdk>=0.6.0,<0.7",
]
# Self-host the FastAPI server that fronts /predict and /v1/chat/completions.
# Used by the Baseten / EKS / GKE deployments.
server = [
    "fastapi>=0.100",
    # Pin starlette below 1.0 — sim_envs/mantis_crm uses the legacy
    # ``TemplateResponse(name, {"request": request})`` positional
    # signature that Starlette 1.0 removed (it raises
    # ``TypeError: unhashable type: 'dict'`` because the context dict
    # is now interpreted as ``name``). Track the migration to
    # ``TemplateResponse(request, name)`` separately so this pin can
    # come off.
    "starlette<1.0",
    "uvicorn>=0.20",
    "pydantic>=2",
    "requests>=2.28",
    "prometheus-client>=0.20",
]
# In-process Holo3 + desktop. Pulls torch / transformers / pyautogui / mss.
# Use this when running the agent loop locally with its own Xvfb.
local-cua = [
    "transformers>=4.52",
    "torch>=2.1",
    "mss>=9.0",
    "pyautogui>=0.9",
]
# Live web viewer (MJPEG + action log).
viewer = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
# Optional GPU acceleration extras (4-bit quantization, accelerate runtime).
gpu = [
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
]
# Phase 2 (#699) profile-snapshot pipeline — S3-compatible store
# (Backblaze B2 / R2 / S3 / MinIO) + zstd archive transport.
# Required only when a Phase 2 host backend (E2B Desktop, Daytona)
# replaces Modal Volume reuse; safe to leave uninstalled for Modal-
# only deployments.
snapshots = [
    "boto3>=1.34",
    "zstandard>=0.22",
    "pydantic>=2",
]
# HUD evaluation harness.
hud = [
    "hud-python>=0.5.34",
    "openai>=1.0",
    "modal>=0.73",
]
# Test / lint tooling.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.8",  # parallel test execution: pytest -n auto (~2x speedup locally)
    # pytest-split shards the test suite across N CI jobs by running
    # ``pytest --splits N --group K`` once per shard. Each shard runs
    # only its slice, so total wall-clock drops by ~Nx on CI matrices
    # that fan out across runners. Locally devs still use ``-n auto``
    # via pytest-xdist; pytest-split is only activated by passing
    # ``--splits``. See .github/workflows/test.yml for the matrix wiring.
    "pytest-split>=0.9",
    "ruff>=0.4",
    "httpx>=0.24",   # FastAPI TestClient
    "jsonschema>=4.0",  # tests/test_plan_schema.py validates plans against docs/reference/plan.schema.json
    "python-multipart>=0.0.9",  # FastAPI Form() params — sim_envs/mantis_crm TestClient flows
    "starlette<1.0",  # see note under [project.optional-dependencies].server
    "jinja2>=3.0",  # fastapi.templating.Jinja2Templates — sim_envs/mantis_boattrader detail-page render tests
    "boto3>=1.34",  # Phase 2 (#699) profile snapshot loader/writer tests
    "zstandard>=0.22",  # Phase 2 (#699) — capture_and_upload_for_testing transport
    # Phase 2 (#699) — moto's S3 mock replaces the skip-gated real-B2
    # integration tests in CI. Strict-CAS path (moto implements
    # conditional PUT correctly); real-B2 tests still gate the
    # NotImplemented-fallback path.
    "moto[s3]>=5.0",
]
# MkDocs site builder + plugins.
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-awesome-pages-plugin>=2.9",
    "pymdown-extensions>=10.7",
]
# Convenience: install everything.
full = [
    "mantis-agent[orchestrator,server,local-cua,viewer,gpu,hud,observability]",
]

[project.scripts]
mantis = "mantis_agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Recipes ship with the wheel: plan.json + any prompt assets a recipe owns.
"mantis_agent.recipes" = ["**/*.json", "**/*.txt"]
# System-prompt templates ship with the wheel; the loader reads them at import.
"mantis_agent.prompts" = ["files/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "OSWorld",
    "outputs",
    "screenshots",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `training/` holds standalone scripts (rollout_collector.py, convert_rollouts.py)
# that the test suite imports via `from training.X import ...`. Adding the repo
# root puts them on sys.path without forcing `training/` to become a package.
pythonpath = ["."]
# Parallel test execution by default — pytest-xdist distributes tests across
# CPU cores and cuts the full-suite runtime from ~12.5 min to ~6 min on a
# typical dev laptop. Override with ``pytest -n0`` or ``pytest -p no:xdist``
# when serial debugging is needed (e.g. running with ``--pdb``).
#
# ``--dist loadgroup`` makes xdist honor ``@pytest.mark.xdist_group("X")``:
# every test with the same group label lands on the same worker, where
# they execute sequentially. Used by the sim-env subprocess-boot tests
# (``test_env_up.py`` / ``test_admin_token_isolation.py``) so we don't
# get 4+ uvicorn boots competing across workers on a contended runner.
# Tests without an explicit group keep the default load-balancing.
addopts = "-n auto --dist loadgroup"
norecursedirs = [
    ".claude",
    "OSWorld",
    "outputs",
    "screenshots",
]
